force-app/main/default/objects/Journal_Metrics__c/Journal_Metrics__c.object-meta.xml
<CustomObject>
    <label>Journal Metrics</label>
    <nameField>
        <displayFormat>JMX-{000000}</displayFormat>
        <label>Journal Metrics Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>