force-app/main/default/objects/Journal_Metrics__c/fields/I_RS_Journal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Journal__c</fullName>
    <description>This is the master field</description>
    <label>Journal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Conference_Journal__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Journal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Conference_Journal__c</referenceTo>
    <relationshipLabel>Journal Metrics</relationshipLabel>
    <relationshipName>Journal_Metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>