force-app/main/default/objects/Journal_Metrics__c/fields/I_RS_Journal_Impact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Journal_Impact__c</fullName>
    <label>Journal Impact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>