force-app/main/default/objects/Journal_Metrics__c/fields/I_RS_Journal_Metric_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Journal_Metric_Name__c</fullName>
    <label>Journal Metric Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>