force-app/main/default/objects/Journal_Metrics__c/fields/I_RS_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Journal quartile (JCR)</fullName>
            </value>
            <value>
                <fullName>Journal impact factor</fullName>
            </value>
            <value>
                <fullName>Journal Quartiles (SNIP)</fullName>
            </value>
            <value>
                <fullName>Journal quartile (SJR)</fullName>
            </value>
            <value>
                <fullName>ABDC journal quality list ranking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Category Normalised Citation Impact</fullName>
                <isActive>false</isActive>
                <label>Category Normalised Citation Impact</label>
            </value>
            <value>
                <fullName>Citation Count</fullName>
                <isActive>false</isActive>
                <label>Citation Count</label>
            </value>
            <value>
                <fullName>Field Weighted Citation Impact</fullName>
                <isActive>false</isActive>
                <label>Field Weighted Citation Impact</label>
            </value>
            <value>
                <fullName>Highly Cited status</fullName>
                <isActive>false</isActive>
                <label>Highly Cited status</label>
            </value>
            <value>
                <fullName>Hot status*</fullName>
                <isActive>false</isActive>
                <label>Hot status*</label>
            </value>
            <value>
                <fullName>Industry collaboration status*</fullName>
                <isActive>false</isActive>
                <label>Industry collaboration status*</label>
            </value>
            <value>
                <fullName>International collaboration status</fullName>
                <isActive>false</isActive>
                <label>International collaboration status</label>
            </value>
            <value>
                <fullName>Journal Index(es)</fullName>
                <isActive>false</isActive>
                <label>Journal Index(es)</label>
            </value>
            <value>
                <fullName>Journal Quartiles (SNIP/SJR)</fullName>
                <isActive>false</isActive>
                <label>Journal Quartiles (SNIP/SJR)</label>
            </value>
            <value>
                <fullName>Societal impact* (mass media, media exposure)</fullName>
                <isActive>false</isActive>
                <label>Societal impact* (mass media, media exposure)</label>
            </value>
            <value>
                <fullName>Top 1% status</fullName>
                <isActive>false</isActive>
                <label>Top 1% status</label>
            </value>
            <value>
                <fullName>Top 10% status</fullName>
                <isActive>false</isActive>
                <label>Top 10% status</label>
            </value>
            <value>
                <fullName>Top percentile status*</fullName>
                <isActive>false</isActive>
                <label>Top percentile status*</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>